# quickai

./: .gitignore  .pylintrc  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
examples/: automl.py  eb0_example.py  image_classification.ipynb  image_classification.py  predictions.py  text_fine_tuning.py  text_inferance.py  vgg_example.py  yolov4_image.py  yolov4_video.py
quickai/: __init__.py  helper.py  image_classification.py  models.py  quickai.py  text_finetuning.py  text_inferance.py  train_cnn_eb.py  train_cnn_vgg19.py
quickai/yolo/: __init__.py  backbone.py  common.py  config.py  darknet_invoke.py  dataset.py  detect.py  detect_custom.py  generate_test.py  generate_train.py  train.py  utils.py  yolov4.py
yolo/: backbone.py  config.py  dataset.py  detect.py  utils.py  yolov4.py
