[metadata]
name = quickAI
version = 1.0.0
author = ac ac
author_email = author@example.com
description = QuickAI is a Python AI framework that makes it extremely easy to experiment with state-of-the-art Machine Learning models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geekjr/quickai
project_urls =
    Bug Tracker = https://github.com/geekjr/quickai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = quickai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = quickai